# hyperliquid-test-framework

./: .env.example  .gitignore  AI_USAGE_REPORT.md  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: hyperliquid_test_suite.yml  test.yml
client/: __init__.py  exceptions.py  hyperliquid_client.py  signer.py
config/: config.yaml
fixtures/: wallet_fixture.py
models/: account.py  order.py  position.py
reports/allure-report/: index.html
reports/allure-results/: 04f6554e-223c-4996-a2a4-52898600d09d-attachment.json  0600ffca-bf26-468e-88f9-611911e9a995-attachment.json  09d6d802-d4b3-4984-a9ba-d986ffa66aeb-result.json  0c2ab223-5d9c-49fc-9952-62094909124e-container.json  0cd3df90-b8a4-439e-b055-8d88cbb5d27f-attachment.json  105d6186-3c0d-4db2-9cb6-213ef16a956d-attachment.json  11846d80-2fac-40bd-be4e-d8958480baca-attachment.txt  12328e24-b235-4170-9239-e28b9624c8c3-attachment.json  12812f0d-8e60-4d28-8c3d-c66ef9ac8b20-result.json  1697c798-bb39-472a-82a7-912c3e20d8dc-attachment.txt  18cffff3-ecdc-496e-9cbe-7f2e324f65cc-result.json  1d94e250-ec81-4264-96c4-70287489ec5d-result.json  1e836d6f-4a31-47a3-a871-d47aaa0ac37d-attachment.txt  221d2211-f1c0-4d37-bfc3-9096e1d0362e-attachment.txt  267f3dd9-3b05-4e48-9ed6-9a2e758f3bd6-attachment.json  28fa637e-e7c4-43e9-aba5-7882c6f8dea6-attachment.json  (+95 more)
scripts/: allure_report.py  allure_report.sh  new_test_case.py
support/: config.py  ids.py  logger.py  retry.py  waiters.py
tests/: test_account.py  test_concurrent.py  test_errors.py  test_orders.py  test_positions.py
(+113 files in other folders)
